--- a/milow/www/index.html
+++ b/milow/www/index.html
@@ -34,7 +34,7 @@
             <p><b>{{ditado.pt}}</b></p>
             Original: {{ditado.original}}
             <br/>Autor: {{ditado.author}}
-            <br/><button class="button button-royal" onclick="window.plugins.socialsharing.shareViaFacebookWithPasteMessageHint('Minha mensagem', null /* img */, null /* url */, 'Paste it dude!', function() {console.log('share ok')}, function(errormsg){alert(errormsg)})"><i class="icon ion-social-facebook"></i> Partilhe esse pensamento</button><h3>{{ditado.kface}}</h3>
+            <br/><button class="button button-royal" onclick="window.plugins.socialsharing.shareViaFacebookWithPasteMessageHint('Minha mensagem', null /* img */, null /* url */, 'Pronto!', function() {console.log('share ok')}, function(errormsg){alert(errormsg)})"><i class="icon ion-social-facebook"></i> Partilhe esse pensamento</button><h3>{{ditado.kface}}</h3>
           </div>
         </div>
       </ion-content>
